--- a/haproxy/haproxy.tmpl
+++ b/haproxy/haproxy.tmpl
@@ -36,7 +36,7 @@ frontend puppet-frontend
   # /puppet-ca/v1/:indirection/:key?environment=:environment
   acl ca_current path -m beg /puppet-ca
   # /:environment/certificate/:nodename
-  acl ca_legacy path -m reg ^/.*/certificate/.*$
+  acl ca_legacy path -m reg ^/.*/(certificate|certificate_request)/.*$
   default_backend puppet-backend
   use_backend puppet-ca-backend if ca_current or ca_legacy
 
